Ajout de factures

--- a/app/Resources/views/default/menu.html.twig
+++ b/app/Resources/views/default/menu.html.twig
@@ -7,7 +7,7 @@
                         <a href="{{ path('fos_user_profile_show') }}">Mes informations</a>
                     </li>
                     <li>
-                        <a href="#">Mes factures</a>
+                        <a href="{{ path('utilisateur_facture') }}">Mes factures</a>
                     </li>
                     <li>
                         <a href="#">Mes adresses</a>
